# pdf-anonymizer

./: .dockerignore  .gitignore  Dockerfile  README.md  anonymize-pdf.py  pyproject.toml  requirements.txt  setup_poetry.sh
.github/workflows/: docker-publish.yml
pdf_anonymizer/: __init__.py  app.py
service/: __init__.py  anonymize-service.py  anonymize_service.py  minio_service.py
