[tool.poetry]
name = "pdf-anonymizer"
version = "0.1.0"
description = "A service for anonymizing sensitive content in PDF files"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "service"},
    {include = "pdf_anonymizer"}
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pymupdf = "^1.23.25"
requests = "^2.31.0"
minio = "^7.2.5"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-anonymizer = "pdf_anonymizer.app:main"
